Adding maven tool M3

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    tools {
+        maven 'M3' // Name you set in Global Tool Configuration
+    }
     stages {
         stage('Build') {
             steps {
