--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,5 +24,11 @@ pipeline {
                 bat "jenkins\\scripts\\deliver.sh" 
             }
         }
+        
+        stage('Complete') { 
+            steps {
+                echo 'Job complete!' 
+            }
+        }
     }
 }
